[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "asgikit"
version = "0.6.0"
description = "Toolkit for building ASGI applications and libraries"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/livioribeiro/asgikit"
keywords = ["asgi", "toolkit", "asyncio", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "asgikit", from = "src" },
    { include = "asgikit/py.typed", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
python-multipart = "*"
aiofiles = "^23.2"

[tool.poetry.dev-dependencies]
uvicorn = { version = "^0.24", extras = ["standard"] }
pylint = "^3.0"
flake8 = "^6.1"
mypy = "^1.5"
isort = "^5.13"
black = "^23.12"
asgiref = "^3.7"
ruff = "^0.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
coverage = { version = "^7.3", extras = ["toml"] }
httpx = "^0.25"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src/asgikit"]

[tool.pylint.MASTER]
disable = ["C0114", "C0115", "C0116", "R0902", "R0913"]

[tool.mypy]
ignore_missing_imports = true
