[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "asgikit"
version = "0.7.0"
description = "Toolkit for building ASGI applications and libraries"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/livioribeiro/asgikit"
keywords = ["asgi", "toolkit", "asyncio", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "asgikit", from = "src" },
    { include = "asgikit/py.typed", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
python-multipart = "*"
aiofiles = "^23.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
uvicorn = { version = "^0.29", extras = ["standard"] }
pylint = "^3.1"
flake8 = "^7.0"
mypy = "^1.9"
isort = "^5.13"
black = "^24.3"
asgiref = "^3.8"
ruff = "^0.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.1"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
coverage = { version = "^7.4", extras = ["toml"] }
httpx = "^0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src/asgikit"]

[tool.pylint.MASTER]
disable = ["C0114", "C0115", "C0116", "R0902", "R0913"]

[tool.mypy]
ignore_missing_imports = true
