[project]
name = "asgikit"
description = "Toolkit for building ASGI applications and libraries"
authors = [
    {name = "Livio Ribeiro", email = "livioribeiro@outlook.com"},
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/livioribeiro/asgikit"
keywords = ["asgi", "toolkit", "asyncio", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dynamic = ["version"]

requires-python = ">=3.11"

dependencies = [
    "python-multipart~=0.0.20",
    "aiofiles~=24.1.0",
]

[dependency-groups]
dev = [
    "uvicorn[standard]~=0.34.0",
    "granian~=1.7.1",
    "mypy~=1.14.0",
    "isort~=5.13.2",
    "ruff~=0.8.3",
]

test = [
    "pytest~=8.3.4",
    "pytest-asyncio~=0.25.0",
    "coverage~=7.6.9",
    "httpx~=0.28.1",
    "asgiref~=3.8.1",
    "orjson~=3.10.12",
]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/asgikit/__version__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"